--- a/tvmaze.html
+++ b/tvmaze.html
@@ -1,52 +1,68 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <title>TV Maze</title>
-  <link
-      href="https://bootswatch.com/5/superhero/bootstrap.css"
-      rel="stylesheet">
+
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+  <link href="https://bootswatch.com/5/superhero/bootstrap.css" rel="stylesheet">
   <meta charset="utf-8">
-  <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
+
 <body>
 
-<main class="container">
-  <h1 class="mt-3">TV Maze</h1>
+  <main class="container">
+    <h1 class="mt-3">TV Maze</h1>
 
-  <form id="searchForm" class="mt-3 mb-5">
-    <div class="mb-3 row">
-    <div class="col-xs-12 col-sm-8 col-md-6 col-lg-5 col-xl-4">
-      <div class="input-group">
-        <input
-            id="searchForm-term"
-            type="search"
-            required
-            value="bletchley"
-            class="form-control"
-            aria-label="Search">
-          <button type="submit" class="input-group-text btn btn-primary">Search</button>
+    <form id="searchForm" class="mt-3 mb-5">
+      <div class="mb-3 row">
+        <div class="col-xs-12 col-sm-8 col-md-6 col-lg-5 col-xl-4">
+          <div class="input-group">
+            <input id="searchForm-term" type="search" required value="bletchley" class="form-control"
+              aria-label="Search">
+            <button type="submit" class="input-group-text btn btn-primary">Search</button>
+          </div>
         </div>
+      </div>
+    </form>
+
+    <section id="showsList" class="row">
+      <!-- will be filled in by JS -->
+    </section>
+
+
+    <!-- Modal -->
+    <div class="modal" id="my-modal" tabindex="-1" aria-labeledby="modal-title" aria-hidden="true">
+      <div class="midal-dialog">
+        <div clas="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title"> Episodes: </h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <!-- inject content here -->
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
     </div>
-    </div>
-  </form>
 
-  <section id="showsList" class="row">
-    <!-- will be filled in by JS -->
-  </section>
 
-  <section id="episodesArea" style="display: none">
-    <h3>Episodes</h3>
-    <ul id="episodesList"><!-- will be filled in by JS --></ul>
-  </section>
-</main>
+  </main>
 
-<script src="http://unpkg.com/jquery"></script>
-<script src="http://unpkg.com/axios/dist/axios.js"></script>
-<script src="tvmaze.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+    crossorigin="anonymous"></script>
+  <script src="http://unpkg.com/jquery"></script>
+  <script src="http://unpkg.com/axios/dist/axios.js"></script>
+  <script src="tvmaze.js"></script>
 
-<!-- we've written in-browser tests for this; uncomment to see them
+  <!-- we've written in-browser tests for this; uncomment to see them
 
 <link rel="stylesheet"
       href="https://unpkg.com/jasmine-core/lib/jasmine-core/jasmine.css" />
@@ -65,4 +81,5 @@
 -->
 
 </body>
+
 </html>
